# gtether

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
examples/reversi/: Cargo.toml  README.md
examples/reversi/assets/shaders/: ambient.frag  board.frag  board.vert  directional.frag
examples/reversi/src/: board.rs  client.rs  main.rs  player.rs  render_util.rs  server.rs
examples/reversi/src/board/: controller.rs  mod.rs  view.rs
examples/reversi/src/bot/: minimax.rs  mod.rs
examples/windows/: Cargo.toml
examples/windows/src/: main.rs
examples/windows/src/render/: ambient.rs  cube.rs  directional.rs  mod.rs
examples/windows/src/shaders/: ambient.frag  deferred.frag  deferred.vert  directional.frag
gtether/: CHANGELOG.md  Cargo.toml
gtether/src/: event.rs  lib.rs  macros.rs
gtether/src/app/: driver.rs  mod.rs
gtether/src/client/: mod.rs
gtether/src/client/gui/: input.rs  mod.rs  window.rs
gtether/src/console/: command.rs  gui.rs  log.rs  mod.rs
gtether/src/gui/: input.rs  mod.rs  window.rs
gtether/src/gui/window/: mod.rs  winit.rs
gtether/src/net/: client.rs  driver.rs  gns.rs  message.rs  mod.rs  server.rs
gtether/src/net/message/: client.rs  dispatch.rs  mod.rs  queue.rs  server.rs
gtether/src/render/: attachment.rs  descriptor_set.rs  frame.rs  image.rs  mod.rs  pipeline.rs  render_pass.rs  swapchain.rs  uniform.rs  window.rs
gtether/src/render/font/: compositor.rs  glyph.rs  layout.rs  mod.rs  sheet.rs  size.rs
gtether/src/render/font/shaders/: sheet.frag  sheet.vert
gtether/src/render/model/: mod.rs  obj.rs
gtether/src/resource/: constant.rs  id.rs  manager.rs  mod.rs  path.rs  watcher.rs
gtether/src/resource/manager/: cache.rs  dependency.rs  executor.rs  future.rs  load.rs  mod.rs  source.rs  task.rs  update.rs
gtether/src/resource/source/: constant.rs  dynamic.rs  fs.rs  list.rs  mod.rs
gtether/src/server/: mod.rs
gtether/src/util/: executor.rs  mod.rs  priority.rs  tick_loop.rs  waker.rs
gtether/src/worker/: mod.rs  pool.rs  task.rs
gtether_derive/: CHANGELOG.md  Cargo.toml
gtether_derive/src/: lib.rs
gtether_derive/src/net/: driver.rs  mod.rs
gtether_derive/src/net/message/: mod.rs
