[workspace]

members = [
    "gtether",
    "examples/*",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
ab_glyph = "0.2"
chrono = "0.4"
image = "0.25"
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"]}
parking_lot = "0.12"
ringbuf = "0.4"
shlex = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
ump = "0.12"
vulkano = "0.34"
vulkano-shaders = "0.34"
winit = { version = "0.30", features = ["x11", "rwh_05"] }

[workspace.dependencies.gtether]
path = "gtether"
