[workspace]

members = [
    "gtether",
    "gtether_derive",
    "examples/*",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["James De Broeck <debroejm@gmail.com>"]
license = "BSD-2-Clause-Plus-Patent"
repository = "https://github.com/gtether/gtether"
keywords = ["gamedev", "multiplayer"]
categories = ["game-engines"]

[workspace.dependencies]
ab_glyph = "0.2"
ahash = "0.8"
aquamarine = "0.6"
arrayvec = "0.7"
async-trait = "0.1"
base64 = "0.22"
bimap = "0.6"
bitcode = "0.6"
bytemuck = "1.21"
chrono = "0.4"
crossbeam = "0.8"
educe = "0.6"
flagset = "0.4"
gns = { git = "https://github.com/hussein-aitlahcen/gns-rs.git" }
image = "0.25"
itertools = "0.14"
nalgebra-glm = { version = "0.19.0", features = ["convert-bytemuck"]}
parking_lot = { version = "0.12", features = ["send_guard"] }
parry3d = "0.18"
regex = "1.11"
ringbuf = "0.4"
sha2 = "0.10"
shlex = "1.3"
smallvec = { version = "1.13", features = ["const_generics"] }
smol = "2.0"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0"
tobj = { version = "4.0.3", features = ["async", "futures"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ump = "0.12"
vulkano = "0.34"
vulkano-shaders = "0.34"
winit = { version = "0.30", features = ["x11", "rwh_05"] }

[workspace.dependencies.gtether]
version = "0.1"
path = "gtether"

[workspace.dependencies.gtether_derive]
version = "0.1"
path = "gtether_derive"
