[package]
name = "gtether"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
graphics = [
    "dep:ab_glyph",
    "dep:image",
    "dep:tobj",
    "dep:vulkano",
    "dep:vulkano-shaders",
]
gui = ["graphics", "dep:winit"]

[dependencies]
ab_glyph = { workspace = true, optional = true }
ahash = { workspace = true }
arrayvec = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytemuck = { workspace = true }
chrono = { workspace = true }
crossbeam = { workspace = true }
educe = { workspace = true }
gns = { workspace = true }
image = { workspace = true, optional = true }
itertools = { workspace = true }
nalgebra-glm = { workspace = true }
ouroboros = { workspace = true }
parking_lot = { workspace = true }
ringbuf = { workspace = true }
sha2 = { workspace = true }
shlex = { workspace = true }
smallvec = { workspace = true }
smol = { workspace = true }
strum = { workspace = true }
tobj = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vulkano = { workspace = true, optional = true }
vulkano-shaders = { workspace = true, optional = true }
ump = { workspace = true }
winit = { workspace = true, optional = true }

[dev-dependencies]
aquamarine = { workspace = true }
assert_matches = "1.5"