[package]
name = "gtether"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Highly concurrent multiplayer focused game engine, with an emphasis on realtime streamable asset management."
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[features]
derive = [
    "dep:gtether_derive",
]
graphics = [
    "dep:ab_glyph",
    "dep:image",
    "dep:tobj",
    "dep:vulkano",
    "dep:vulkano-shaders",
]
gui = ["graphics", "dep:winit"]
default = ["derive"]

[dependencies]
ab_glyph = { workspace = true, optional = true }
aquamarine = { workspace = true }
ahash = { workspace = true }
arrayvec = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bimap = { workspace = true }
bitcode = { workspace = true }
bytemuck = { workspace = true }
chrono = { workspace = true }
crossbeam = { workspace = true }
educe = { workspace = true }
flagset = { workspace = true }
gns = { workspace = true }
gtether_derive = { workspace = true, optional = true }
image = { workspace = true, optional = true }
itertools = { workspace = true }
nalgebra-glm = { workspace = true }
parking_lot = { workspace = true }
ringbuf = { workspace = true }
sha2 = { workspace = true }
shlex = { workspace = true }
smallvec = { workspace = true }
smol = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tobj = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vulkano = { workspace = true, optional = true }
vulkano-shaders = { workspace = true, optional = true }
ump = { workspace = true }
winit = { workspace = true, optional = true }

[dev-dependencies]
assert_matches = "1.5"