[package]
name = "gtether"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Highly concurrent multiplayer focused game engine, with an emphasis on realtime streamable asset management."
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[package.metadata.release]
shared-version = true

[features]
derive = [
    "dep:gtether_derive",
]
graphics = [
    "dep:ab_glyph",
    "dep:image",
    "dep:tobj",
    "dep:vulkano",
    "dep:vulkano-shaders",
]
gui = ["graphics", "dep:winit"]
default = ["derive"]

[dependencies]
ab_glyph = { workspace = true, optional = true }
aquamarine = { workspace = true }
ahash = { workspace = true }
arrayvec = { workspace = true }
async-task = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bimap = { workspace = true }
bitcode = { workspace = true }
boxcar = { workspace = true }
bytemuck = { workspace = true }
chrono = { workspace = true }
crossbeam = { workspace = true }
educe = { workspace = true }
flagset = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
game-networking-sockets = { workspace = true }
gtether_derive = { workspace = true, optional = true }
image = { workspace = true, optional = true }
itertools = { workspace = true }
nalgebra-glm = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
ouroboros = { workspace = true }
papaya = { workspace = true }
parking_lot = { workspace = true }
pin-project = { workspace = true }
pin-project-lite = { workspace = true }
ringbuf = { workspace = true }
sha2 = { workspace = true }
shlex = { workspace = true }
slab = { workspace = true }
smallvec = { workspace = true }
smol = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
thread_local = { workspace = true }
tobj = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vulkano = { workspace = true, optional = true }
vulkano-shaders = { workspace = true, optional = true }
ump = { workspace = true }
winit = { workspace = true, optional = true }

[dev-dependencies]
assert_matches = "1.5"
macro_rules_attribute = "0.2.2"
rstest = "0.26.1"
smol-macros = "0.1.1"
test-log = { version = "0.2.18", default-features = false, features = ["trace", "color"] }
