[package]
name = "gtether_derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Macros for gtether"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-crate = "3.2"
quote = "1.0"
regex = { workspace = true }
syn = { version = "2.0", features = ["extra-traits"] }