[package]
name = "reversi"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { workspace = true }
gtether = { workspace = true, features = ["gui"] }
itertools = { workspace = true }
nalgebra-glm = { workspace = true }
parking_lot = { workspace = true }
parry3d = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }