[package]
name = "reversi"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
bitcode = { workspace = true }
bytemuck = { workspace = true }
educe = { workspace = true }
flagset = { workspace = true }
gtether = { workspace = true, features = ["gui"] }
itertools = { workspace = true }
nalgebra-glm = { workspace = true }
parking_lot = { workspace = true }
parry3d = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ump = { workspace = true }
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }