[package]
name = "windows"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtether = { workspace = true, features = ["gui"] }
nalgebra-glm = { workspace = true }
parking_lot = { workspace = true }
tracing-subscriber = { workspace = true }
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
