[package]
name = "windows"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { workspace = true }
gtether = { workspace = true, features = ["gui"] }
nalgebra-glm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
