[package]
name = "windows"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
bytemuck = { workspace = true }
gtether = { workspace = true, features = ["gui"] }
nalgebra-glm = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
